# time-tracker

./: Cargo.toml
src/: config.rs  main.rs  tests.rs  utils.rs
src/gui/: gui_logic.rs  gui_main.rs  serialize.rs
