[package]
name = "time_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = "0.13.1"
iced_aw = { version = "0.11.0", default-features = false, features = ["menu"] }
jiff = { version = "0.1.13", features = ["serde"] }
# rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
rfd = "0.15.0"

[package.metadata.bundle]
name = "my time tracker"
identifier = "com.my_time_tracker"
icon = ["uhr_icon.png"]
